Fix CreateCluster: Remove unnecessary sleep when start ansible Extend AnsibleConfig : add list of ephemerals Extend UserData : umount possible mounted ephemeral Adjust AnsibleConfigTest: Extends Ansible Playbook : ephemerals, monitoring, mesos

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -1,25 +1,4 @@
-
-
-- name: Generate directory structure available on all hosts
-  file:
-      path: /etc/bibigrid
-      state: directory
-            owner: root
-            group: root
-            mode: 0755
-
-  file:
-      path: /vol/
-      state: directory
-      owner: root
-      group: root
-      mode: 0755
-
-  file:
-      path: /vol/spool/
-      state: directory
-      owner: root
-      group: root
-      mode: 0777
+- include: 010-apt.yml
+- include: 020-disk.yml
 
 
