--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
@@ -1,7 +1,7 @@
 - name: Install cloud9 dependencies
   apt:
     name: "{{ item }}"
-    state: "latest"
+    state: "present"
   with_items:
     - build-essential
     - python
