--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
@@ -1,6 +1,7 @@
-- import_tasks: 010-nfs.yml
+- include: 001-monitor.yml
+- include: 010-nfs.yml
   when: enable_nfs == 'yes'
-- import_tasks: 020-gridengine.yml
+- include: 020-gridengine.yml
   when: enable_gridengine == 'yes'
-- import_tasks: 030-mesos.yml
+- include: 030-mesos.yml
   when: enable_mesos == 'yes'
