--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -1,16 +1,16 @@
-- include: 001-monitor.yml
-- include: 005-disk.yml
+- import_task: 001-monitor.yml
+- import_task: 005-disk.yml
 
-- include: 010-nfs.yml
+- import_task: 010-nfs.yml
   when:
     - enable_nfs == 'yes'
-- include: 020-gridengine.yml
+- import_task: 020-gridengine.yml
   when:
     - enable_gridengine == 'yes'
-- include: 030-mesos.yml
+- import_task: 030-mesos.yml
   when:
     - enable_mesos == 'yes'
 
-- include: 999-cloud9.yml
+- import_task: 999-cloud9.yml
   when:
     - enable_cloud9 == 'yes'
