--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
@@ -1,15 +1,50 @@
-- name: Add Mesosphere project key
-  apt_key:
-    id: E56151BF
-    keyserver: keyserver.ubuntu.com
-    state: present
-
-- name: Add Mesosphere repositories
-  apt_repository:
-    repo: "deb-src http://repos.mesosphere.io/ubuntu {{ ansible_lsb.codename }} main"
-    state: present
-
-
-- name: Update apt cache
+- name: Install common packages
   apt:
-    update_cache: 'yes'
+    name: "{{ item }}"
+    state: "present"
+  with_items:
+    - apt-transport-https 
+    - ca-certificates 
+    - curl 
+    - software-properties-common
+
+
+# - name: Add Mesosphere project key
+#   apt_key:
+#     id: E56151BF
+#     keyserver: keyserver.ubuntu.com
+#     state: present
+
+# - name: Add Mesosphere repositories
+#   apt_repository:
+#     repo: "deb-src http://repos.mesosphere.io/ubuntu {{ ansible_lsb.codename }} main"
+#     state: present
+
+
+- name: Add Docker repository key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    state: present
+    
+    
+- name: Add Docker repository
+  apt_repository:
+    repo: deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename}} stable
+    state: present
+
+
+- name: Add Cassandra repository key
+  apt_key:
+    url: https://www.apache.org/dist/cassandra/KEYS
+    state: present
+    
+    
+- name: Add Cassandra repository
+  apt_repository:
+    repo: deb http://www.apache.org/dist/cassandra/debian 311x main
+    state: present
+
+
+# - name: Update apt cache
+#   apt:
+#     update_cache: 'yes'
