--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
@@ -1,7 +1,7 @@
-- import_task: 001-monitor.yml
-- import_task: 010-nfs.yml
+- import_tasks: 001-monitor.yml
+- import_tasks: 010-nfs.yml
   when: enable_nfs == 'yes'
-- import_task: 020-gridengine.yml
+- import_tasks: 020-gridengine.yml
   when: enable_gridengine == 'yes'
-- import_task: 030-mesos.yml
+- import_tasks: 030-mesos.yml
   when: enable_mesos == 'yes'
