fix #70: site.yml don't include slave vars, add missing task for slave role

--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
@@ -1,4 +1,5 @@
 - import_tasks: 001-monitor.yml
+- import_tasks: 005-disk.yml
 - import_tasks: 010-nfs.yml
   when: enable_nfs == 'yes'
 - import_tasks: 020-gridengine.yml
