--- a/bibigrid-core/src/main/resources/playbook/site.yml
+++ b/bibigrid-core/src/main/resources/playbook/site.yml
@@ -10,6 +10,7 @@
   become: yes
   vars_files:
       - "vars/common.yml"
+      - "vars/{{ ansible_default_ipv4.address }}.yml"
   roles:
   - common
   - slave
