adresses #73: append swift package

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/001-monitor.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/001-monitor.yml
@@ -51,7 +51,7 @@
 - name: (Re-)start Apache
   systemd:
     name: apache2
-    state: started
+    state: restarted
     enabled: yes
   when: ganglia_site_enabled
 
