fix ansible(apt) : Deactivate auto-update function fix ansible :  replace deprecated filter notation fix ansible(mesos): naming schema

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/030-docker.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/030-docker.yml
@@ -20,7 +20,7 @@
   systemd:
     name: docker
     state: restarted
-  when: docker_config | changed
+  when: docker_config is changed
 
 - name: Create docker group
   group:
