--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
@@ -1,3 +1,16 @@
+- name: Deactivate auto-update Funktion
+  shell: |
+        systemctl stop apt-daily.service
+        systemctl disable apt-daily.service
+        systemctl stop apt-daily.timer
+        systemctl disable apt-daily.timer
+        systemctl kill --kill-who=all apt-daily.service
+        while ! (systemctl list-units --all apt-daily.service | fgrep -q dead)
+        do
+          sleep 1;
+        done
+  tags: deactivate_autoupdate
+
 - name: Install common packages
   apt:
     name: "{{ item }}"
