--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/030-mesos.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/030-mesos.yml
@@ -61,7 +61,7 @@
         enabled: yes
 
 - block:
-  - name: Configure master as mesos slave
+  - name: Configure master as mesos slave 1/3
     copy:
       content: /vol/spool/mesos
       dest: /etc/mesos-slave/work_dir
@@ -69,6 +69,7 @@
       group: root
       mode: 0644
 
+  - name: Configure master as mesos slave 2/3
     copy:
       content: mesos,docker
       dest: /etc/mesos/zk
@@ -76,6 +77,7 @@
       group: root
       mode: 0644
 
+  - name: Configure master as mesos slave 3/3
     copy:
       content: false
       dest: /etc/mesos-slave/switch_user
