--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -1,16 +1,39 @@
+- debug:
+    msg: "[BIBIGRID] Setup Apache and Ganglia monitor"
 - import_tasks: 001-monitor.yml
+
+- debug:
+    msg: "[BIBIGRID] Mount disk"
 - import_tasks: 005-disk.yml
 
+- debug:
+    msg: "[BIBIGRID] Setup NFS"
+  when:
+    - enable_nfs == 'yes'
 - import_tasks: 010-nfs.yml
   when:
     - enable_nfs == 'yes'
+
+- debug:
+    msg: "[BIBIGRID] Setup GridEngine"
+  when:
+    - enable_gridengine == 'yes'
 - import_tasks: 020-gridengine.yml
   when:
     - enable_gridengine == 'yes'
+
+- debug:
+    msg: "[BIBIGRID] Setup Mesos"
+  when:
+    - enable_mesos == 'yes'
 - import_tasks: 030-mesos.yml
   when:
     - enable_mesos == 'yes'
 
+- debug:
+    msg: "[BIBIGRID] Setup Cloud9"
+  when:
+    - enable_cloud9 == 'yes'
 - import_tasks: 999-cloud9.yml
   when:
     - enable_cloud9 == 'yes'
