feat(cloud9): #74 - Add cloud9 service and properly stop cloud9 at cloud9 intent end

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
@@ -30,4 +30,29 @@
     group: root
     mode: 0755
 
+- name: Copy cloud9 service
+  copy:
+    src: cloud9/cloud9service
+    dest: /etc/init.d/cloud9service
+    mode: 0755
+    owner: root
+    group: root
 
+- name: Create cloud9 settings folder
+  file:
+    path: /etc/cloud9
+    owner: root
+    group: root
+    state: directory
+
+- name: Add default cloud9 settings file
+  copy:
+    content: |-
+      workingDir=~/
+    dest: /etc/cloud9/settings.conf
+    owner: root
+    group: root
+    mode: 0755
+
+- name: Register cloud9 service
+  command: systemctl daemon-reload
