feat(perf): #78 - Add performance measure script and ansible task

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -9,3 +9,7 @@
 - debug:
     msg: "[BIBIGRID] Setup Docker"
 - import_tasks: 030-docker.yml
+
+- debug:
+    msg: "[BIBIGRID] Measure cluster performance"
+- import_tasks: 999-bibigridperf.yml
