Fix line endings when starting cluster from windows breaking perf script and gridengine

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
@@ -150,7 +150,7 @@
   args:
     creates: /etc/bibigrid/gridengine/schedule.created
 
-#qconf -Mconf ./global
+#qconf -Mconf ./global.conf
 
 - name: Copy global.conf
   copy:
