--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
@@ -1,13 +1,22 @@
 - name: Install cloud9 dependencies
   apt:
-    name: "{{ item.name }}"
+    name: "{{ item }}"
     state: "present"
-  when: "{{ item.when }}"
   with_items:
-    - {name: "build-essential", when: true}
-    - {name: "python", when: true}
-    - {name: "nodejs-legacy", when: ansible_distribution != "Ubuntu" or ansible_distribution_version < 17}
-    - {name: "nodejs", when: ansible_distribution == "Ubuntu" and ansible_distribution_version > 17}
+    - build-essential
+    - python
+
+- name: Install cloud9 nodejs-legacy
+  apt:
+    name: "nodejs-legacy"
+    state: "present"
+  when: ansible_distribution != 'Ubuntu' or ansible_distribution_version is version('17', '<')
+
+- name: Install cloud9 nodejs
+  apt:
+    name: "nodejs"
+    state: "present"
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('17', '>=')
 
 - name: Clone c9/core repository
   git:
