fix(nfs): #81 - Fix nfs share in ansible and config drive offset

--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
@@ -1,5 +1,5 @@
 # we have to make sure that the disk is NOT mounted by cloud-init beforehand
-- name: mount disk
+- name: mount ephemeral disk
   mount:
     path: /vol/scratch
     src: "{{ ephemerals[0] }}"
