Modify scratch volume mount permission and allow it for all users.

--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
@@ -7,3 +7,11 @@
     state: mounted
   when:
     - ephemerals
+    
+- name: Change permission for newly mounted /vol/scratch mount point
+  file:
+    path: /vol/scratch
+    state: directory
+    mode: 0777
+  when:
+    - ephemerals
