--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/999-bibigridperf.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/999-bibigridperf.yml
@@ -6,9 +6,9 @@
     owner: root
     group: root
 
-- name: Execute bibigrid performance script
-  shell: '/usr/local/bin/bibigridperf'
-  args:
-    chdir: '~/'
+#- name: Execute bibigrid performance script
+#  shell: '/usr/local/bin/bibigridperf'
+#  args:
+#    chdir: '~/'
 
 # TODO: make results available
