--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/005-disk.yml
@@ -7,3 +7,10 @@
     state: mounted
   when:
     - ephemerals
+
+- name: Change permissions for mountpoint
+  file:
+    path: /vol/scratch
+    mode: 0777
+    state: directory
+    recurse: yes
