added vol link to ubuntu home folder

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
@@ -22,3 +22,9 @@
     group: root
     mode: 0777
 
+- name: Create link in ubuntu home
+  file:
+    src: /vol/
+    dest: /home/ubuntu/vol
+    state: link
+
