--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/001-monitor.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/001-monitor.yml
@@ -3,6 +3,7 @@
   apt:
     name: "apache2"
     state: present  # not using latest package to avoid time consuming checks for prepared images
+  tags: ["master-apache2"]
 
 - name: Install Ganglia
   apt:
@@ -12,6 +13,7 @@
     - ganglia-monitor
     - ganglia-webfrontend
     - gmetad
+  tags: ["master-ganglia-install"]
 
 - name: Configure Ganglia
   copy:
@@ -20,7 +22,7 @@
     owner: root
     group: root
     mode: 0644
-  
+  tags: ["master-ganglia-configure"]
 
 - copy:
     src: ganglia/gmetad.conf
@@ -28,6 +30,7 @@
     owner: root
     group: root
     mode: 0644
+  tags: ["master-ganglia-copy"]
 
 - template:
     src: ganglia/gmond.conf.j2
@@ -35,18 +38,21 @@
     owner: root
     group: root
     mode: 0644
+  tags: ["master-ganglia-template"]
 
 - name: (Re-)start Ganglia
   systemd:
     name: ganglia-monitor
     state: restarted
     enabled: yes
+  tags: ["master-ganglia-restart"]
     
 - name: Enable Ganglia sites
   shell: "/usr/sbin/a2ensite ganglia"
   args:
     creates: /etc/apache2/sites-enabled/ganglia.conf
   register: ganglia_site_enabled
+  tags: ["master-ganglia-site-enable"]
     
 - name: (Re-)start Apache
   systemd:
@@ -54,7 +60,7 @@
     state: restarted
     enabled: yes
   when: ganglia_site_enabled
-
+  tags: ["master-restart apache"]
 
 
 
