--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
@@ -142,6 +142,7 @@
     mode: 0440
     owner: root
     group: root
+  tags: ["master-cp-schedule"]
 
 - name: Generate schedule config from schedule.conf
   shell: 'qconf -Msconf /etc/bibigrid/gridengine/schedule.conf && touch /etc/bibigrid/gridengine/schedule.created'
@@ -149,6 +150,7 @@
     SGE_ROOT: /var/lib/gridengine
   args:
     creates: /etc/bibigrid/gridengine/schedule.created
+  tags: ["master-gen-schedule"]
 
 #qconf -Mconf ./global.conf
 
@@ -159,6 +161,7 @@
     mode: 0440
     owner: root
     group: root
+  tags: ["master-cp-global"]
 
 - name: Generate global configuration from global.conf
   shell: 'qconf -Mconf /etc/bibigrid/gridengine/global && touch /etc/bibigrid/gridengine/global.created'
@@ -166,6 +169,7 @@
     SGE_ROOT: /var/lib/gridengine
   args:
     creates: /etc/bibigrid/gridengine/global.created
+  tags: ["master-gen-global"]
 
 #update user environment
 - name: update defaults user environment (.bashrc)
@@ -174,6 +178,7 @@
     state: present
     regexp: '^export SGE_ROOT=/var/lib/gridengine$'
     line: 'export SGE_ROOT=/var/lib/gridengine'
+  tags: ["master-update-def-env"]
 
 # submit host
 - name : add master as submit host
@@ -182,6 +187,7 @@
     SGE_ROOT: /var/lib/gridengine
   args:
     creates: /etc/bibigrid/gridengine/submit_host.added
+  tags: ["master-add-as-submit-host"]
 
 - name: Copy add_exec.sh
   copy:
@@ -190,6 +196,7 @@
     mode: 0550
     owner: root
     group: root
+  tags: ["master-copy-add_execsh"]
 
 # add master as exec host (if configured)
 - block:
@@ -198,6 +205,7 @@
       name: gridengine-exec
       state: restarted
     when: act_qmaster is changed
+    tags: ["master-restart-gridengine-exec-daemon"]
 
   - name: Add master as exec host
     shell: '/etc/bibigrid/gridengine/add_exec.sh {{ansible_hostname }} {{ master.cores }} && touch /etc/bibigrid/master_exec_host.added'
@@ -206,9 +214,11 @@
     args:
       creates: /etc/bibigrid/master_exec_host.added
   when: use_master_as_compute == 'yes'
+    tags: ["master-add-exec-host"]
 
 - name: add all slaves as exec host
   shell: "/etc/bibigrid/gridengine/add_exec.sh $(nslookup {{ item.ip }} | grep name | cut -f 2 -d '=' | cut -f 1 -d '.') {{ item.cores }}"
   environment:
     SGE_ROOT: /var/lib/gridengine
   with_items: "{{ slaves }}"
+  tags: ["master-add-slaves-exec-host"]
