--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -1,10 +1,12 @@
 - debug:
     msg: "[BIBIGRID] Setup Apache and Ganglia monitor"
 - import_tasks: 001-monitor.yml
+  tags: ["master-monitor"]
 
 - debug:
     msg: "[BIBIGRID] Mount disk"
 - import_tasks: 005-disk.yml
+  tags: ["master-mountdisk"]
 
 - debug:
     msg: "[BIBIGRID] Setup NFS"
@@ -13,6 +15,7 @@
 - import_tasks: 010-nfs.yml
   when:
     - enable_nfs == 'yes'
+  tags: ["master-nfs"]
 
 - debug:
     msg: "[BIBIGRID] Setup GridEngine"
@@ -21,6 +24,7 @@
 - import_tasks: 020-gridengine.yml
   when:
     - enable_gridengine == 'yes'
+  tags: ["master-gridengine"]
 
 - debug:
     msg: "[BIBIGRID] Setup Mesos"
@@ -29,6 +33,7 @@
 - import_tasks: 030-mesos.yml
   when:
     - enable_mesos == 'yes'
+  tags: ["master-mesos"]
 
 - debug:
     msg: "[BIBIGRID] Setup Cloud9"
@@ -37,3 +42,4 @@
 - import_tasks: 999-cloud9.yml
   when:
     - enable_cloud9 == 'yes'
+  tags: ["master-cloud9"]
