--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
@@ -1,28 +1,36 @@
 - debug:
     msg: "[BIBIGRID] Setup Apache and Ganglia monitor"
 - import_tasks: 001-monitor.yml
+  tags: ["slave-monitor"]
 
 - debug:
     msg: "[BIBIGRID] Mount disk"
 - import_tasks: 005-disk.yml
+  tags: ["slave-mountdisk"]
 
 - debug:
     msg: "[BIBIGRID] Setup NFS"
   when:
     - enable_nfs == 'yes'
 - import_tasks: 010-nfs.yml
-  when: enable_nfs == 'yes'
+  when:
+    - enable_nfs == 'yes'
+  tags: ["slave-nfs"]
 
 - debug:
     msg: "[BIBIGRID] Setup GridEngine"
   when:
     - enable_gridengine == 'yes'
 - import_tasks: 020-gridengine.yml
-  when: enable_gridengine == 'yes'
+  when:
+    - enable_gridengine == 'yes'
+  tags: ["slave-gridengine"]
 
 - debug:
     msg: "[BIBIGRID] Setup Mesos"
   when:
     - enable_mesos == 'yes'
 - import_tasks: 030-mesos.yml
-  when: enable_mesos == 'yes'
+  when:
+    - enable_mesos == 'yes'
+  tags: ["slave-mesos"]
