--- a/bibigrid-core/src/main/resources/playbook/site.yml
+++ b/bibigrid-core/src/main/resources/playbook/site.yml
@@ -7,6 +7,7 @@
   roles:
     - common
     - master
+  tags: ["master"]
 
 - hosts: slaves
   become: yes
@@ -16,3 +17,4 @@
   roles:
   - common
   - slave
+  tags: ["slaves"]
