--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -32,6 +32,15 @@
 
 
 - debug:
+    msg: "[BIBIGRID] Setup Slurm master"
+  when:
+    - enable_slurm == 'yes'
+- include: 021-slurm.yml
+  when:
+    - enable_slurm == 'yes'
+
+
+- debug:
     msg: "[BIBIGRID] Setup Mesos"
   when:
     - enable_mesos == 'yes'
