--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -11,5 +11,14 @@
 - import_tasks: 030-docker.yml
 
 - debug:
+      msg: "[BIBIGRID] Munge"
+- include: 040-munge.yml
+  tags: ['slurm']
+- debug:
+      msg: "[BIBIGRID] SLURM Config"
+- include: 041-slurm.yml
+  tags: ['slurm']
+
+- debug:
     msg: "[BIBIGRID] Measure cluster performance"
 - import_tasks: 999-bibigridperf.yml
