--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/main.yml
@@ -1,28 +1,36 @@
 - debug:
     msg: "[BIBIGRID] Setup Apache and Ganglia monitor"
-- import_tasks: 001-monitor.yml
+- include: 001-monitor.yml
 
 - debug:
     msg: "[BIBIGRID] Mount disk"
-- import_tasks: 005-disk.yml
+- include: 005-disk.yml
 
 - debug:
     msg: "[BIBIGRID] Setup NFS"
   when:
     - enable_nfs == 'yes'
-- import_tasks: 010-nfs.yml
+- include: 010-nfs.yml
   when: enable_nfs == 'yes'
 
 - debug:
     msg: "[BIBIGRID] Setup GridEngine"
   when:
     - enable_gridengine == 'yes'
-- import_tasks: 020-gridengine.yml
-  when: enable_gridengine == 'yes'
+- include: 020-gridengine.yml
+  when:
+    - enable_gridengine == 'yes'
+
+- debug:
+    msg: "[BIBIGRID] Setup Slurm Worker"
+  when: enable_slurm == 'yes'
+- include: 021-slurm.yml
+  tags: ['slurm']
+  when: enable_slurm == 'yes'
 
 - debug:
     msg: "[BIBIGRID] Setup Mesos"
   when:
     - enable_mesos == 'yes'
-- import_tasks: 030-mesos.yml
+- include: 030-mesos.yml
   when: enable_mesos == 'yes'
