finishes base slurm configuration (issue #79)

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -10,13 +10,15 @@
     msg: "[BIBIGRID] Setup Docker"
 - import_tasks: 030-docker.yml
 
-- debug:
+- block:
+  - debug:
       msg: "[BIBIGRID] Munge"
-- include: 040-munge.yml
-  tags: ['slurm']
-- debug:
+  - include: 040-munge.yml
+  - debug:
       msg: "[BIBIGRID] SLURM Config"
-- include: 041-slurm.yml
+  - include: 041-slurm.yml
+  when:
+    - enable_slurm == 'yes'
   tags: ['slurm']
 
 - debug:
